# sbm-dashboard

./: .gitignore  README.md  compose.yml  optimized_compose.sh  package-lock.json
.github/workflows/: deploy_frontend.yaml  validate_frontend.yaml  workflow_enforcer.yaml
.vite/deps_temp_712507cd/: @ant-design_icons.js  @ant-design_icons.js.map  @reduxjs_toolkit.js  @reduxjs_toolkit.js.map  antd.js  chunk-BKSEB3PN.js  chunk-BKSEB3PN.js.map  chunk-MNVRHAYX.js  chunk-MNVRHAYX.js.map  chunk-QRGIBUP5.js  chunk-QRGIBUP5.js.map  react-dom_client.js  react-dom_client.js.map  react-redux.js  react-redux.js.map  react-router-dom.js  react-router-dom.js.map  react.js
backend/: .dockerignore  .env  Dockerfile.alerter  Dockerfile.api  Dockerfile.pusher  package-lock.json  package.json  tsconfig.json
backend/alerter/: Cargo.toml
backend/alerter/src/: main.rs  poc_approaches.rs
backend/database_client_rs/: Cargo.toml
backend/database_client_rs/src/: lib.rs
backend/mqtt_broker/: Cargo.toml  Dockerfile.auth  Dockerfile.broker  add_test_users.sh  compose.yaml
backend/mqtt_broker/custom_plugin/: Cargo.toml  mqtt.conf
backend/mqtt_broker/custom_plugin/src/: lib.rs
backend/mqtt_broker/fake_sensor/: main.py
backend/mqtt_broker/lean/: Cargo.toml
backend/mqtt_broker/poc_sub/: Cargo.toml
backend/mqtt_broker/poc_sub/src/: main.rs
backend/mqtt_broker/pusher/: Cargo.toml
backend/mqtt_broker/pusher/src/: main.rs
backend/mqtt_broker/src/: main.rs
backend/src/: index.ts  insertSensorData.js  insertSensorData.ts
backend/src/config/: db.config.ts  server.config.ts
backend/src/controllers/: alerts.controllers.ts  readings.controllers.ts  sensors.controllers.ts  timeseries.controllers.ts
backend/src/models/: alert.model.ts  readings.model.ts  sensor.model.ts  timeseries.model.ts
backend/src/persistence/: alerts.persistence.ts  readings.persistence.ts  sensors.persistence.ts  shared.persistence.ts
backend/src/persistence/interfaces/: readings.persistence.ts
backend/src/routes/: alerts.routes.ts  readings.routes.ts  sensor.routes.ts  sensors.routes.ts  timeseries.routes.ts
backend/src/util/: date.util.ts
database/: .dockerignore  Dockerfile  Dockerfile.database  README.md  add_test_users.sh  compose.yml  entry.sh  entrypoint.sh  initiate_replication.js  mock_data_gen.py  requirements.txt  setup.js
hardware/picow_poc/: CMakeLists.txt  lwipopts.h  main.c
picow/: CMakeLists.txt  main.c
sbm-dashboard/: Dockerfile  package-lock.json  package.json  vite.config.ts
sbm-dashboard/src/: App.css  App.tsx  main.tsx
sbm-dashboard/src/components/: Popup.tsx  SensorPopup.tsx
sbm-dashboard/src/components/alert/: AlertAddingInSensor.tsx
sbm-dashboard/src/components/alerts/: AlertNotification.css  AlertNotification.tsx  AlertNotificationCollapsed.css  AlertNotificationCollapsed.tsx
sbm-dashboard/src/pages/: OperationsPage.tsx  TimeSeriesView.tsx
sbm-dashboard/src/store/: sensors.ts  store.ts
(+10 files in other folders)
