[package]
name = "alerter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.database_client]
path = "../database_client_rs"

[dependencies]
anyhow = "1.0.83"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
futures-util = "0.3.30"
log = "0.4.21"
mongodb = { version = "2.8.2", features = ["bson-chrono-0_4"] }
serde = "1.0.201"
serde_json = "1.0.117"
tokio = "1.37.0"
