[package]
name = "database_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
mongodb = { version = "2.8.2", features = ["bson-chrono-0_4"] }
serde = { version = "1.0.201", features = ["derive"] }
