[package]
name = "pusher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
envy = "0.4.2"
log = "0.4.21"
mongodb = "2.8.2"
rumqttc = "=0.24.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_bytes = "0.11.14"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["time"] }
